back/services/api-gateway/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: soulgarden
  labels:
    app: api-gateway
spec:
  selector:
    app: api-gateway
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
